fix list font sizes being too small

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,6 +165,11 @@ blockquote {
     code {
         font: 15px monospace;
     }
+
+    // lists
+    ul, ol, li {
+        font-size: 19px; // same as <p>
+    }
 }
 
 footer {
